--- a/paused.conf
+++ b/paused.conf
@@ -1,9 +1,9 @@
 
 # resume information
-resume-index = 606
+resume-index = 75
 rate =     100.00
 randomize-hosts = true
-seed = 7050798924171913292
+seed = 14920946649333641002
 shard = 1/1
 # ADAPTER SETTINGS
 adapter = 
@@ -21,8 +21,8 @@ rotate-filesize = 0
 pcap = 
 # TARGET SELECTION (IP, PORTS, EXCLUDES)
 retries = 0
-ports = 80,800-1000
-range = 127.0.0.0/8
+ports = 80
+range = 10.0.0.0/8
 
 capture = cert
 nocapture = html
